KKD-528 - Prevent content layout shift

--- a/public/css/src/components/article.less
+++ b/public/css/src/components/article.less
@@ -170,7 +170,7 @@
 
     &__image {
         &--video {
-            height: 100%;
+            height: auto;
         }
     }
 
